// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`traceCallHandler > should execute a contract call with callTracer 1`] = `
{
  "calls": [
    {
      "calls": [],
      "from": "0x5FbDB2315678afecb367f032d93F642f64180aa3",
      "gas": 16517164n,
      "gasUsed": 4536n,
      "input": "0xc6888fa10000000000000000000000000000000000000000000000000000000000000002",
      "output": "0x0000000000000000000000000000000000000000000000000000000000000004",
      "to": "0xa16e02e87b7454126e5e10d957a927a7f5b5d2be",
      "type": "CALL",
      "value": 0n,
    },
  ],
  "from": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
  "gas": 16784800n,
  "gasUsed": 11700n,
  "input": "0x575f45050000000000000000000000000000000000000000000000000000000000000002",
  "output": "0x0000000000000000000000000000000000000000000000000000000000000004",
  "to": "0x5FbDB2315678afecb367f032d93F642f64180aa3",
  "type": "CALL",
  "value": 0n,
}
`;

exports[`traceCallHandler > should execute a contract call with default tracer 1`] = `
{
  "failed": false,
  "gas": 6669n,
  "returnValue": "0x",
  "structLogs": [
    {
      "depth": 0,
      "gas": 16784800n,
      "gasCost": 6n,
      "op": "PUSH1",
      "pc": 0,
      "stack": [],
    },
    {
      "depth": 0,
      "gas": 16784797n,
      "gasCost": 6n,
      "op": "PUSH1",
      "pc": 2,
      "stack": [
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16784794n,
      "gasCost": 15n,
      "op": "MSTORE",
      "pc": 4,
      "stack": [
        "0x80",
        "0x40",
      ],
    },
    {
      "depth": 0,
      "gas": 16784782n,
      "gasCost": 4n,
      "op": "CALLVALUE",
      "pc": 5,
      "stack": [],
    },
    {
      "depth": 0,
      "gas": 16784780n,
      "gasCost": 6n,
      "op": "DUP1",
      "pc": 6,
      "stack": [
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784777n,
      "gasCost": 6n,
      "op": "ISZERO",
      "pc": 7,
      "stack": [
        "0x0",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784774n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 8,
      "stack": [
        "0x0",
        "0x1",
      ],
    },
    {
      "depth": 0,
      "gas": 16784771n,
      "gasCost": 20n,
      "op": "JUMPI",
      "pc": 11,
      "stack": [
        "0x0",
        "0x1",
        "0xf",
      ],
    },
    {
      "depth": 0,
      "gas": 16784761n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 15,
      "stack": [
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784760n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 16,
      "stack": [
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784758n,
      "gasCost": 6n,
      "op": "PUSH1",
      "pc": 17,
      "stack": [],
    },
    {
      "depth": 0,
      "gas": 16784755n,
      "gasCost": 4n,
      "op": "CALLDATASIZE",
      "pc": 19,
      "stack": [
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784753n,
      "gasCost": 6n,
      "op": "LT",
      "pc": 20,
      "stack": [
        "0x4",
        "0x24",
      ],
    },
    {
      "depth": 0,
      "gas": 16784750n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 21,
      "stack": [
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784747n,
      "gasCost": 20n,
      "op": "JUMPI",
      "pc": 24,
      "stack": [
        "0x0",
        "0xe8",
      ],
    },
    {
      "depth": 0,
      "gas": 16784737n,
      "gasCost": 4n,
      "op": "PUSH0",
      "pc": 25,
      "stack": [],
    },
    {
      "depth": 0,
      "gas": 16784735n,
      "gasCost": 6n,
      "op": "CALLDATALOAD",
      "pc": 26,
      "stack": [
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784732n,
      "gasCost": 6n,
      "op": "PUSH1",
      "pc": 27,
      "stack": [
        "0x3fb5c1cb00000000000000000000000000000000000000000000000000000000",
      ],
    },
    {
      "depth": 0,
      "gas": 16784729n,
      "gasCost": 6n,
      "op": "SHR",
      "pc": 29,
      "stack": [
        "0x3fb5c1cb00000000000000000000000000000000000000000000000000000000",
        "0xe0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784726n,
      "gasCost": 6n,
      "op": "DUP1",
      "pc": 30,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784723n,
      "gasCost": 6n,
      "op": "PUSH4",
      "pc": 31,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784720n,
      "gasCost": 6n,
      "op": "GT",
      "pc": 36,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
        "0x7fcaf666",
      ],
    },
    {
      "depth": 0,
      "gas": 16784717n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 37,
      "stack": [
        "0x3fb5c1cb",
        "0x1",
      ],
    },
    {
      "depth": 0,
      "gas": 16784714n,
      "gasCost": 20n,
      "op": "JUMPI",
      "pc": 40,
      "stack": [
        "0x3fb5c1cb",
        "0x1",
        "0x8a",
      ],
    },
    {
      "depth": 0,
      "gas": 16784704n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 138,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784703n,
      "gasCost": 6n,
      "op": "DUP1",
      "pc": 139,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784700n,
      "gasCost": 6n,
      "op": "PUSH4",
      "pc": 140,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784697n,
      "gasCost": 6n,
      "op": "GT",
      "pc": 145,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
        "0x349a0054",
      ],
    },
    {
      "depth": 0,
      "gas": 16784694n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 146,
      "stack": [
        "0x3fb5c1cb",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784691n,
      "gasCost": 20n,
      "op": "JUMPI",
      "pc": 149,
      "stack": [
        "0x3fb5c1cb",
        "0x0",
        "0xc6",
      ],
    },
    {
      "depth": 0,
      "gas": 16784681n,
      "gasCost": 6n,
      "op": "DUP1",
      "pc": 150,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784678n,
      "gasCost": 6n,
      "op": "PUSH4",
      "pc": 151,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784675n,
      "gasCost": 6n,
      "op": "EQ",
      "pc": 156,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
        "0x349a0054",
      ],
    },
    {
      "depth": 0,
      "gas": 16784672n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 157,
      "stack": [
        "0x3fb5c1cb",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784669n,
      "gasCost": 20n,
      "op": "JUMPI",
      "pc": 160,
      "stack": [
        "0x3fb5c1cb",
        "0x0",
        "0x142",
      ],
    },
    {
      "depth": 0,
      "gas": 16784659n,
      "gasCost": 6n,
      "op": "DUP1",
      "pc": 161,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784656n,
      "gasCost": 6n,
      "op": "PUSH4",
      "pc": 162,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784653n,
      "gasCost": 6n,
      "op": "EQ",
      "pc": 167,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
        "0x38cc4831",
      ],
    },
    {
      "depth": 0,
      "gas": 16784650n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 168,
      "stack": [
        "0x3fb5c1cb",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784647n,
      "gasCost": 20n,
      "op": "JUMPI",
      "pc": 171,
      "stack": [
        "0x3fb5c1cb",
        "0x0",
        "0x15e",
      ],
    },
    {
      "depth": 0,
      "gas": 16784637n,
      "gasCost": 6n,
      "op": "DUP1",
      "pc": 172,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784634n,
      "gasCost": 6n,
      "op": "PUSH4",
      "pc": 173,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784631n,
      "gasCost": 6n,
      "op": "EQ",
      "pc": 178,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784628n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 179,
      "stack": [
        "0x3fb5c1cb",
        "0x1",
      ],
    },
    {
      "depth": 0,
      "gas": 16784625n,
      "gasCost": 20n,
      "op": "JUMPI",
      "pc": 182,
      "stack": [
        "0x3fb5c1cb",
        "0x1",
        "0x17c",
      ],
    },
    {
      "depth": 0,
      "gas": 16784615n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 380,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784614n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 381,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784611n,
      "gasCost": 6n,
      "op": "PUSH1",
      "pc": 384,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
      ],
    },
    {
      "depth": 0,
      "gas": 16784608n,
      "gasCost": 6n,
      "op": "DUP1",
      "pc": 386,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784605n,
      "gasCost": 4n,
      "op": "CALLDATASIZE",
      "pc": 387,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x4",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784603n,
      "gasCost": 6n,
      "op": "SUB",
      "pc": 388,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x4",
        "0x4",
        "0x24",
      ],
    },
    {
      "depth": 0,
      "gas": 16784600n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 389,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x4",
        "0x20",
      ],
    },
    {
      "depth": 0,
      "gas": 16784597n,
      "gasCost": 6n,
      "op": "ADD",
      "pc": 390,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x4",
        "0x20",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784594n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 391,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x4",
        "0x24",
      ],
    },
    {
      "depth": 0,
      "gas": 16784591n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 392,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x24",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784588n,
      "gasCost": 6n,
      "op": "SWAP2",
      "pc": 395,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x24",
        "0x4",
        "0x191",
      ],
    },
    {
      "depth": 0,
      "gas": 16784585n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 396,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x4",
        "0x24",
      ],
    },
    {
      "depth": 0,
      "gas": 16784582n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 397,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784579n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 400,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0xba7",
      ],
    },
    {
      "depth": 0,
      "gas": 16784571n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 2983,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784570n,
      "gasCost": 4n,
      "op": "PUSH0",
      "pc": 2984,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784568n,
      "gasCost": 6n,
      "op": "PUSH1",
      "pc": 2985,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784565n,
      "gasCost": 6n,
      "op": "DUP3",
      "pc": 2987,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x20",
      ],
    },
    {
      "depth": 0,
      "gas": 16784562n,
      "gasCost": 6n,
      "op": "DUP5",
      "pc": 2988,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x20",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784559n,
      "gasCost": 6n,
      "op": "SUB",
      "pc": 2989,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x20",
        "0x4",
        "0x24",
      ],
    },
    {
      "depth": 0,
      "gas": 16784556n,
      "gasCost": 6n,
      "op": "SLT",
      "pc": 2990,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x20",
        "0x20",
      ],
    },
    {
      "depth": 0,
      "gas": 16784553n,
      "gasCost": 6n,
      "op": "ISZERO",
      "pc": 2991,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784550n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 2992,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x1",
      ],
    },
    {
      "depth": 0,
      "gas": 16784547n,
      "gasCost": 20n,
      "op": "JUMPI",
      "pc": 2995,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x1",
        "0xbbc",
      ],
    },
    {
      "depth": 0,
      "gas": 16784537n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 3004,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784536n,
      "gasCost": 4n,
      "op": "PUSH0",
      "pc": 3005,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784534n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 3006,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784531n,
      "gasCost": 6n,
      "op": "DUP5",
      "pc": 3009,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
      ],
    },
    {
      "depth": 0,
      "gas": 16784528n,
      "gasCost": 6n,
      "op": "DUP3",
      "pc": 3010,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
      ],
    },
    {
      "depth": 0,
      "gas": 16784525n,
      "gasCost": 6n,
      "op": "DUP6",
      "pc": 3011,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784522n,
      "gasCost": 6n,
      "op": "ADD",
      "pc": 3012,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x0",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784519n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 3013,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784516n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 3016,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x9af",
      ],
    },
    {
      "depth": 0,
      "gas": 16784508n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 2479,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784507n,
      "gasCost": 4n,
      "op": "PUSH0",
      "pc": 2480,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784505n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 2481,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784502n,
      "gasCost": 6n,
      "op": "CALLDATALOAD",
      "pc": 2482,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x0",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784499n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 2483,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x0",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784496n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 2484,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784494n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 2485,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784491n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 2488,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
      ],
    },
    {
      "depth": 0,
      "gas": 16784488n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 2489,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784485n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 2492,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
        "0x999",
      ],
    },
    {
      "depth": 0,
      "gas": 16784477n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 2457,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784476n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 2458,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784473n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 2461,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
        "0x9a2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784470n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 2462,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
        "0x9a2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784467n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 2465,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
        "0x9a2",
        "0x2",
        "0x990",
      ],
    },
    {
      "depth": 0,
      "gas": 16784459n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 2448,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
        "0x9a2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784458n,
      "gasCost": 4n,
      "op": "PUSH0",
      "pc": 2449,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
        "0x9a2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784456n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 2450,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
        "0x9a2",
        "0x2",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784453n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 2451,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
        "0x9a2",
        "0x2",
        "0x0",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784450n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 2452,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
        "0x9a2",
        "0x2",
        "0x2",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784448n,
      "gasCost": 6n,
      "op": "SWAP2",
      "pc": 2453,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
        "0x9a2",
        "0x2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784445n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 2454,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
        "0x2",
        "0x2",
        "0x9a2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784442n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 2455,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
        "0x2",
        "0x9a2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784440n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 2456,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
        "0x2",
        "0x9a2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784432n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 2466,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784431n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 2467,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784428n,
      "gasCost": 6n,
      "op": "EQ",
      "pc": 2468,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
        "0x2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784425n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 2469,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
        "0x1",
      ],
    },
    {
      "depth": 0,
      "gas": 16784422n,
      "gasCost": 20n,
      "op": "JUMPI",
      "pc": 2472,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
        "0x1",
        "0x9ac",
      ],
    },
    {
      "depth": 0,
      "gas": 16784412n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 2476,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784411n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 2477,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784409n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 2478,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
        "0x9bd",
      ],
    },
    {
      "depth": 0,
      "gas": 16784401n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 2493,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784400n,
      "gasCost": 6n,
      "op": "SWAP3",
      "pc": 2494,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xbc9",
        "0x24",
        "0x4",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784397n,
      "gasCost": 6n,
      "op": "SWAP2",
      "pc": 2495,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0x2",
        "0x24",
        "0x4",
        "0xbc9",
      ],
    },
    {
      "depth": 0,
      "gas": 16784394n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 2496,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0x2",
        "0xbc9",
        "0x4",
        "0x24",
      ],
    },
    {
      "depth": 0,
      "gas": 16784392n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 2497,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0x2",
        "0xbc9",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784390n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 2498,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0x2",
        "0xbc9",
      ],
    },
    {
      "depth": 0,
      "gas": 16784382n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 3017,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784381n,
      "gasCost": 6n,
      "op": "SWAP2",
      "pc": 3018,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784378n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 3019,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x2",
        "0x0",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784376n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 3020,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x2",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784374n,
      "gasCost": 6n,
      "op": "SWAP3",
      "pc": 3021,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784371n,
      "gasCost": 6n,
      "op": "SWAP2",
      "pc": 3022,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x24",
        "0x4",
        "0x191",
      ],
    },
    {
      "depth": 0,
      "gas": 16784368n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 3023,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x191",
        "0x4",
        "0x24",
      ],
    },
    {
      "depth": 0,
      "gas": 16784366n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 3024,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x191",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784364n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 3025,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x191",
      ],
    },
    {
      "depth": 0,
      "gas": 16784356n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 401,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784355n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 402,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784352n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 405,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x3e5",
      ],
    },
    {
      "depth": 0,
      "gas": 16784344n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 997,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784343n,
      "gasCost": 6n,
      "op": "DUP1",
      "pc": 998,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784340n,
      "gasCost": 4n,
      "op": "PUSH0",
      "pc": 999,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784338n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 1000,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x2",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784335n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 1001,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x2",
        "0x0",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784332n,
      "gasCost": 5000n,
      "op": "SSTORE",
      "pc": 1002,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x2",
        "0x2",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779332n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 1003,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779330n,
      "gasCost": 6n,
      "op": "PUSH32",
      "pc": 1004,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779327n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 1037,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
      ],
    },
    {
      "depth": 0,
      "gas": 16779324n,
      "gasCost": 6n,
      "op": "PUSH1",
      "pc": 1038,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779321n,
      "gasCost": 6n,
      "op": "MLOAD",
      "pc": 1040,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x2",
        "0x40",
      ],
    },
    {
      "depth": 0,
      "gas": 16779318n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 1041,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x2",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779315n,
      "gasCost": 6n,
      "op": "SWAP2",
      "pc": 1044,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x2",
        "0x80",
        "0x41a",
      ],
    },
    {
      "depth": 0,
      "gas": 16779312n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 1045,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x80",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779309n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 1046,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779306n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 1049,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xbe1",
      ],
    },
    {
      "depth": 0,
      "gas": 16779298n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 3041,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779297n,
      "gasCost": 4n,
      "op": "PUSH0",
      "pc": 3042,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779295n,
      "gasCost": 6n,
      "op": "PUSH1",
      "pc": 3043,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779292n,
      "gasCost": 6n,
      "op": "DUP3",
      "pc": 3045,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0x0",
        "0x20",
      ],
    },
    {
      "depth": 0,
      "gas": 16779289n,
      "gasCost": 6n,
      "op": "ADD",
      "pc": 3046,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0x0",
        "0x20",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779286n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 3047,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0x0",
        "0xa0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779283n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 3048,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779281n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 3049,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779278n,
      "gasCost": 4n,
      "op": "PUSH0",
      "pc": 3052,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
      ],
    },
    {
      "depth": 0,
      "gas": 16779276n,
      "gasCost": 6n,
      "op": "DUP4",
      "pc": 3053,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779273n,
      "gasCost": 6n,
      "op": "ADD",
      "pc": 3054,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x0",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779270n,
      "gasCost": 6n,
      "op": "DUP5",
      "pc": 3055,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779267n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 3056,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779264n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 3059,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
        "0xbd2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779256n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 3026,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779255n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 3027,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779252n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 3030,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
        "0xbdb",
      ],
    },
    {
      "depth": 0,
      "gas": 16779249n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 3031,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
        "0xbdb",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779246n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 3034,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
        "0xbdb",
        "0x2",
        "0x990",
      ],
    },
    {
      "depth": 0,
      "gas": 16779238n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 2448,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
        "0xbdb",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779237n,
      "gasCost": 4n,
      "op": "PUSH0",
      "pc": 2449,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
        "0xbdb",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779235n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 2450,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
        "0xbdb",
        "0x2",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779232n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 2451,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
        "0xbdb",
        "0x2",
        "0x0",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779229n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 2452,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
        "0xbdb",
        "0x2",
        "0x2",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779227n,
      "gasCost": 6n,
      "op": "SWAP2",
      "pc": 2453,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
        "0xbdb",
        "0x2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779224n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 2454,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
        "0x2",
        "0x2",
        "0xbdb",
      ],
    },
    {
      "depth": 0,
      "gas": 16779221n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 2455,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
        "0x2",
        "0xbdb",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779219n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 2456,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
        "0x2",
        "0xbdb",
      ],
    },
    {
      "depth": 0,
      "gas": 16779211n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 3035,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779210n,
      "gasCost": 6n,
      "op": "DUP3",
      "pc": 3036,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779207n,
      "gasCost": 12n,
      "op": "MSTORE",
      "pc": 3037,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
        "0x2",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779198n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 3038,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779196n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 3039,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779194n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 3040,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
        "0xbf4",
      ],
    },
    {
      "depth": 0,
      "gas": 16779186n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 3060,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779185n,
      "gasCost": 6n,
      "op": "SWAP3",
      "pc": 3061,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x41a",
        "0x2",
        "0x80",
        "0xa0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779182n,
      "gasCost": 6n,
      "op": "SWAP2",
      "pc": 3062,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0xa0",
        "0x2",
        "0x80",
        "0x41a",
      ],
    },
    {
      "depth": 0,
      "gas": 16779179n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 3063,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0xa0",
        "0x41a",
        "0x80",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779177n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 3064,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0xa0",
        "0x41a",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779175n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 3065,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0xa0",
        "0x41a",
      ],
    },
    {
      "depth": 0,
      "gas": 16779167n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 1050,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0xa0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779166n,
      "gasCost": 6n,
      "op": "PUSH1",
      "pc": 1051,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0xa0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779163n,
      "gasCost": 6n,
      "op": "MLOAD",
      "pc": 1053,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0xa0",
        "0x40",
      ],
    },
    {
      "depth": 0,
      "gas": 16779160n,
      "gasCost": 6n,
      "op": "DUP1",
      "pc": 1054,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0xa0",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779157n,
      "gasCost": 6n,
      "op": "SWAP2",
      "pc": 1055,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0xa0",
        "0x80",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779154n,
      "gasCost": 6n,
      "op": "SUB",
      "pc": 1056,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x80",
        "0x80",
        "0xa0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779151n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 1057,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x80",
        "0x20",
      ],
    },
    {
      "depth": 0,
      "gas": 16779148n,
      "gasCost": 1381n,
      "op": "LOG1",
      "pc": 1058,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x20",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16778142n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 1059,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16778140n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 1060,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
      ],
    },
    {
      "depth": 0,
      "gas": 16778132n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 406,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16778131n,
      "gasCost": 0n,
      "op": "STOP",
      "pc": 407,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
  ],
}
`;

exports[`traceCallHandler > should execute a contract call with prestateTracer and diffMode false 1`] = `
{
  "0x0000000000000000000000000000000000000000": {
    "balance": "0x3635c9adc5dea00000",
    "code": "0x",
    "nonce": 0,
    "storage": {},
  },
  "0x5fbdb2315678afecb367f032d93f642f64180aa3": {
    "balance": "0x0",
    "code": "0x608060405234801561000f575f5ffd5b50600436106100e8575f3560e01c80637fcaf6661161008a578063981f549911610064578063981f549914610220578063d0da9af514610241578063e30081a014610271578063f2c9ecd81461028d576100e8565b80637fcaf666146101c857806389ea642f146101e45780638d5d4de714610202576100e8565b8063349a0054116100c6578063349a00541461014257806338cc48311461015e5780633fb5c1cb1461017c578063575f450514610198576100e8565b806301ef8faa146100ec57806312a7b914146101085780631e26fd3314610126575b5f5ffd5b610106600480360381019061010191906108dd565b6102ab565b005b6101106102ee565b60405161011d9190610922565b60405180910390f35b610140600480360381019061013b9190610965565b610303565b005b61015c60048036038101906101579190610aff565b610356565b005b6101666103bd565b6040516101739190610b8e565b60405180910390f35b61019660048036038101906101919190610ba7565b6103e5565b005b6101b260048036038101906101ad9190610ba7565b610425565b6040516101bf9190610be1565b60405180910390f35b6101e260048036038101906101dd9190610bfa565b610508565b005b6101ec610552565b6040516101f99190610ca1565b60405180910390f35b61020a6105e2565b6040516102179190610b8e565b60405180910390f35b610228610607565b6040516102389493929190610cc1565b60405180910390f35b61025b60048036038101906102569190610ba7565b61063a565b6040516102689190610be1565b60405180910390f35b61028b600480360381019061028691906108dd565b6107f0565b005b61029561086a565b6040516102a29190610be1565b60405180910390f35b8060045f6101000a81548173ffffffffffffffffffffffffffffffffffffffff021916908373ffffffffffffffffffffffffffffffffffffffff16021790555050565b5f60015f9054906101000a900460ff16905090565b8060015f6101000a81548160ff0219169083151502179055507fd31368d67652afe87682ed73c60ba1c2f499ae414a86d618c275326b0d6739968160405161034b9190610922565b60405180910390a150565b61035f846103e5565b61036883610303565b61037182610508565b61037a816107f0565b7fc3e1073869e2f3735605599cbfd67bc84b7ce8f34226501a7c84f1bea115cb0c848484846040516103af9493929190610cc1565b60405180910390a150505050565b5f60035f9054906101000a900473ffffffffffffffffffffffffffffffffffffffff16905090565b805f819055507f9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c85425918160405161041a9190610be1565b60405180910390a150565b5f5f60045f9054906101000a900473ffffffffffffffffffffffffffffffffffffffff1690505f8173ffffffffffffffffffffffffffffffffffffffff1663c6888fa1856040518263ffffffff1660e01b81526004016104859190610be1565b6020604051808303815f875af11580156104a1573d5f5f3e3d5ffd5b505050506040513d601f19601f820116820180604052508101906104c59190610d1f565b90507f9d164645d2740a65754f47c13dc8efcc8a63d0f41785c4d3cd1dfd289e64a3bc816040516104f69190610be1565b60405180910390a18092505050919050565b80600290816105179190610f47565b507fd824731128b3439672eb2a63774a112947e43a4102ef25ba8fe18ad8930a9188816040516105479190610ca1565b60405180910390a150565b60606002805461056190610d77565b80601f016020809104026020016040519081016040528092919081815260200182805461058d90610d77565b80156105d85780601f106105af576101008083540402835291602001916105d8565b820191905f5260205f20905b8154815290600101906020018083116105bb57829003601f168201915b5050505050905090565b60045f9054906101000a900473ffffffffffffffffffffffffffffffffffffffff1681565b5f5f60605f61061461086a565b61061c6102ee565b610624610552565b61062c6103bd565b935093509350935090919293565b5f5f8260405160240161064d9190610be1565b6040516020818303038152906040527fc6888fa1000000000000000000000000000000000000000000000000000000007bffffffffffffffffffffffffffffffffffffffffffffffffffffffff19166020820180517bffffffffffffffffffffffffffffffffffffffffffffffffffffffff838183161783525050505090505f5f60045f9054906101000a900473ffffffffffffffffffffffffffffffffffffffff1673ffffffffffffffffffffffffffffffffffffffff1683604051610714919061105a565b5f60405180830381855af49150503d805f811461074c576040519150601f19603f3d011682016040523d82523d5f602084013e610751565b606091505b509150915081610796576040517f08c379a000000000000000000000000000000000000000000000000000000000815260040161078d906110ba565b60405180910390fd5b5f818060200190518101906107ab9190610d1f565b90507fb26b3b59a9756bf7416fe9326c05726fbfe955ce9e948f70da7a91f4978fb4d2816040516107dc9190610be1565b60405180910390a180945050505050919050565b8060035f6101000a81548173ffffffffffffffffffffffffffffffffffffffff021916908373ffffffffffffffffffffffffffffffffffffffff1602179055507f88749aed52403b3a8ec7763273d5665190617f46de93b08aab1cc6ec80dc2fb48160405161085f9190610b8e565b60405180910390a150565b5f5f54905090565b5f604051905090565b5f5ffd5b5f5ffd5b5f73ffffffffffffffffffffffffffffffffffffffff82169050919050565b5f6108ac82610883565b9050919050565b6108bc816108a2565b81146108c6575f5ffd5b50565b5f813590506108d7816108b3565b92915050565b5f602082840312156108f2576108f161087b565b5b5f6108ff848285016108c9565b91505092915050565b5f8115159050919050565b61091c81610908565b82525050565b5f6020820190506109355f830184610913565b92915050565b61094481610908565b811461094e575f5ffd5b50565b5f8135905061095f8161093b565b92915050565b5f6020828403121561097a5761097961087b565b5b5f61098784828501610951565b91505092915050565b5f819050919050565b6109a281610990565b81146109ac575f5ffd5b50565b5f813590506109bd81610999565b92915050565b5f5ffd5b5f5ffd5b5f601f19601f8301169050919050565b7f4e487b71000000000000000000000000000000000000000000000000000000005f52604160045260245ffd5b610a11826109cb565b810181811067ffffffffffffffff82111715610a3057610a2f6109db565b5b80604052505050565b5f610a42610872565b9050610a4e8282610a08565b919050565b5f67ffffffffffffffff821115610a6d57610a6c6109db565b5b610a76826109cb565b9050602081019050919050565b828183375f83830152505050565b5f610aa3610a9e84610a53565b610a39565b905082815260208101848484011115610abf57610abe6109c7565b5b610aca848285610a83565b509392505050565b5f82601f830112610ae657610ae56109c3565b5b8135610af6848260208601610a91565b91505092915050565b5f5f5f5f60808587031215610b1757610b1661087b565b5b5f610b24878288016109af565b9450506020610b3587828801610951565b935050604085013567ffffffffffffffff811115610b5657610b5561087f565b5b610b6287828801610ad2565b9250506060610b73878288016108c9565b91505092959194509250565b610b88816108a2565b82525050565b5f602082019050610ba15f830184610b7f565b92915050565b5f60208284031215610bbc57610bbb61087b565b5b5f610bc9848285016109af565b91505092915050565b610bdb81610990565b82525050565b5f602082019050610bf45f830184610bd2565b92915050565b5f60208284031215610c0f57610c0e61087b565b5b5f82013567ffffffffffffffff811115610c2c57610c2b61087f565b5b610c3884828501610ad2565b91505092915050565b5f81519050919050565b5f82825260208201905092915050565b8281835e5f83830152505050565b5f610c7382610c41565b610c7d8185610c4b565b9350610c8d818560208601610c5b565b610c96816109cb565b840191505092915050565b5f6020820190508181035f830152610cb98184610c69565b905092915050565b5f608082019050610cd45f830187610bd2565b610ce16020830186610913565b8181036040830152610cf38185610c69565b9050610d026060830184610b7f565b95945050505050565b5f81519050610d1981610999565b92915050565b5f60208284031215610d3457610d3361087b565b5b5f610d4184828501610d0b565b91505092915050565b7f4e487b71000000000000000000000000000000000000000000000000000000005f52602260045260245ffd5b5f6002820490506001821680610d8e57607f821691505b602082108103610da157610da0610d4a565b5b50919050565b5f819050815f5260205f209050919050565b5f6020601f8301049050919050565b5f82821b905092915050565b5f60088302610e037fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff82610dc8565b610e0d8683610dc8565b95508019841693508086168417925050509392505050565b5f819050919050565b5f610e48610e43610e3e84610990565b610e25565b610990565b9050919050565b5f819050919050565b610e6183610e2e565b610e75610e6d82610e4f565b848454610dd4565b825550505050565b5f5f905090565b610e8c610e7d565b610e97818484610e58565b505050565b5b81811015610eba57610eaf5f82610e84565b600181019050610e9d565b5050565b601f821115610eff57610ed081610da7565b610ed984610db9565b81016020851015610ee8578190505b610efc610ef485610db9565b830182610e9c565b50505b505050565b5f82821c905092915050565b5f610f1f5f1984600802610f04565b1980831691505092915050565b5f610f378383610f10565b9150826002028217905092915050565b610f5082610c41565b67ffffffffffffffff811115610f6957610f686109db565b5b610f738254610d77565b610f7e828285610ebe565b5f60209050601f831160018114610faf575f8415610f9d578287015190505b610fa78582610f2c565b86555061100e565b601f198416610fbd86610da7565b5f5b82811015610fe457848901518255600182019150602085019450602081019050610fbf565b868310156110015784890151610ffd601f891682610f10565b8355505b6001600288020188555050505b505050505050565b5f81519050919050565b5f81905092915050565b5f61103482611016565b61103e8185611020565b935061104e818560208601610c5b565b80840191505092915050565b5f611065828461102a565b915081905092915050565b7f44656c65676174652063616c6c206661696c65640000000000000000000000005f82015250565b5f6110a4601483610c4b565b91506110af82611070565b602082019050919050565b5f6020820190508181035f8301526110d181611098565b905091905056fea26469706673582212208f4b03ecd811d9907758def77931c053a94abb6ffae9b11ccc29f1dd1532f6f664736f6c634300081e0033",
    "nonce": 2,
    "storage": {
      "0x0000000000000000000000000000000000000000000000000000000000000000": "0x01",
    },
  },
  "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266": {
    "balance": "0x3635c9adc5de107bfb",
    "code": "0x",
    "nonce": 1,
    "storage": {},
  },
}
`;

exports[`traceCallHandler > should execute a contract call with prestateTracer and diffMode true 1`] = `
{
  "post": {
    "0x5fbdb2315678afecb367f032d93f642f64180aa3": {
      "storage": {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x02",
      },
    },
    "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266": {
      "balance": "0x3635c9adc5de0d81d4",
      "nonce": 2,
    },
  },
  "pre": {
    "0x0000000000000000000000000000000000000000": {
      "balance": "0x3635c9adc5dea00000",
      "code": "0x",
      "nonce": 0,
      "storage": {},
    },
    "0x5fbdb2315678afecb367f032d93f642f64180aa3": {
      "balance": "0x0",
      "code": "0x608060405234801561000f575f5ffd5b50600436106100e8575f3560e01c80637fcaf6661161008a578063981f549911610064578063981f549914610220578063d0da9af514610241578063e30081a014610271578063f2c9ecd81461028d576100e8565b80637fcaf666146101c857806389ea642f146101e45780638d5d4de714610202576100e8565b8063349a0054116100c6578063349a00541461014257806338cc48311461015e5780633fb5c1cb1461017c578063575f450514610198576100e8565b806301ef8faa146100ec57806312a7b914146101085780631e26fd3314610126575b5f5ffd5b610106600480360381019061010191906108dd565b6102ab565b005b6101106102ee565b60405161011d9190610922565b60405180910390f35b610140600480360381019061013b9190610965565b610303565b005b61015c60048036038101906101579190610aff565b610356565b005b6101666103bd565b6040516101739190610b8e565b60405180910390f35b61019660048036038101906101919190610ba7565b6103e5565b005b6101b260048036038101906101ad9190610ba7565b610425565b6040516101bf9190610be1565b60405180910390f35b6101e260048036038101906101dd9190610bfa565b610508565b005b6101ec610552565b6040516101f99190610ca1565b60405180910390f35b61020a6105e2565b6040516102179190610b8e565b60405180910390f35b610228610607565b6040516102389493929190610cc1565b60405180910390f35b61025b60048036038101906102569190610ba7565b61063a565b6040516102689190610be1565b60405180910390f35b61028b600480360381019061028691906108dd565b6107f0565b005b61029561086a565b6040516102a29190610be1565b60405180910390f35b8060045f6101000a81548173ffffffffffffffffffffffffffffffffffffffff021916908373ffffffffffffffffffffffffffffffffffffffff16021790555050565b5f60015f9054906101000a900460ff16905090565b8060015f6101000a81548160ff0219169083151502179055507fd31368d67652afe87682ed73c60ba1c2f499ae414a86d618c275326b0d6739968160405161034b9190610922565b60405180910390a150565b61035f846103e5565b61036883610303565b61037182610508565b61037a816107f0565b7fc3e1073869e2f3735605599cbfd67bc84b7ce8f34226501a7c84f1bea115cb0c848484846040516103af9493929190610cc1565b60405180910390a150505050565b5f60035f9054906101000a900473ffffffffffffffffffffffffffffffffffffffff16905090565b805f819055507f9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c85425918160405161041a9190610be1565b60405180910390a150565b5f5f60045f9054906101000a900473ffffffffffffffffffffffffffffffffffffffff1690505f8173ffffffffffffffffffffffffffffffffffffffff1663c6888fa1856040518263ffffffff1660e01b81526004016104859190610be1565b6020604051808303815f875af11580156104a1573d5f5f3e3d5ffd5b505050506040513d601f19601f820116820180604052508101906104c59190610d1f565b90507f9d164645d2740a65754f47c13dc8efcc8a63d0f41785c4d3cd1dfd289e64a3bc816040516104f69190610be1565b60405180910390a18092505050919050565b80600290816105179190610f47565b507fd824731128b3439672eb2a63774a112947e43a4102ef25ba8fe18ad8930a9188816040516105479190610ca1565b60405180910390a150565b60606002805461056190610d77565b80601f016020809104026020016040519081016040528092919081815260200182805461058d90610d77565b80156105d85780601f106105af576101008083540402835291602001916105d8565b820191905f5260205f20905b8154815290600101906020018083116105bb57829003601f168201915b5050505050905090565b60045f9054906101000a900473ffffffffffffffffffffffffffffffffffffffff1681565b5f5f60605f61061461086a565b61061c6102ee565b610624610552565b61062c6103bd565b935093509350935090919293565b5f5f8260405160240161064d9190610be1565b6040516020818303038152906040527fc6888fa1000000000000000000000000000000000000000000000000000000007bffffffffffffffffffffffffffffffffffffffffffffffffffffffff19166020820180517bffffffffffffffffffffffffffffffffffffffffffffffffffffffff838183161783525050505090505f5f60045f9054906101000a900473ffffffffffffffffffffffffffffffffffffffff1673ffffffffffffffffffffffffffffffffffffffff1683604051610714919061105a565b5f60405180830381855af49150503d805f811461074c576040519150601f19603f3d011682016040523d82523d5f602084013e610751565b606091505b509150915081610796576040517f08c379a000000000000000000000000000000000000000000000000000000000815260040161078d906110ba565b60405180910390fd5b5f818060200190518101906107ab9190610d1f565b90507fb26b3b59a9756bf7416fe9326c05726fbfe955ce9e948f70da7a91f4978fb4d2816040516107dc9190610be1565b60405180910390a180945050505050919050565b8060035f6101000a81548173ffffffffffffffffffffffffffffffffffffffff021916908373ffffffffffffffffffffffffffffffffffffffff1602179055507f88749aed52403b3a8ec7763273d5665190617f46de93b08aab1cc6ec80dc2fb48160405161085f9190610b8e565b60405180910390a150565b5f5f54905090565b5f604051905090565b5f5ffd5b5f5ffd5b5f73ffffffffffffffffffffffffffffffffffffffff82169050919050565b5f6108ac82610883565b9050919050565b6108bc816108a2565b81146108c6575f5ffd5b50565b5f813590506108d7816108b3565b92915050565b5f602082840312156108f2576108f161087b565b5b5f6108ff848285016108c9565b91505092915050565b5f8115159050919050565b61091c81610908565b82525050565b5f6020820190506109355f830184610913565b92915050565b61094481610908565b811461094e575f5ffd5b50565b5f8135905061095f8161093b565b92915050565b5f6020828403121561097a5761097961087b565b5b5f61098784828501610951565b91505092915050565b5f819050919050565b6109a281610990565b81146109ac575f5ffd5b50565b5f813590506109bd81610999565b92915050565b5f5ffd5b5f5ffd5b5f601f19601f8301169050919050565b7f4e487b71000000000000000000000000000000000000000000000000000000005f52604160045260245ffd5b610a11826109cb565b810181811067ffffffffffffffff82111715610a3057610a2f6109db565b5b80604052505050565b5f610a42610872565b9050610a4e8282610a08565b919050565b5f67ffffffffffffffff821115610a6d57610a6c6109db565b5b610a76826109cb565b9050602081019050919050565b828183375f83830152505050565b5f610aa3610a9e84610a53565b610a39565b905082815260208101848484011115610abf57610abe6109c7565b5b610aca848285610a83565b509392505050565b5f82601f830112610ae657610ae56109c3565b5b8135610af6848260208601610a91565b91505092915050565b5f5f5f5f60808587031215610b1757610b1661087b565b5b5f610b24878288016109af565b9450506020610b3587828801610951565b935050604085013567ffffffffffffffff811115610b5657610b5561087f565b5b610b6287828801610ad2565b9250506060610b73878288016108c9565b91505092959194509250565b610b88816108a2565b82525050565b5f602082019050610ba15f830184610b7f565b92915050565b5f60208284031215610bbc57610bbb61087b565b5b5f610bc9848285016109af565b91505092915050565b610bdb81610990565b82525050565b5f602082019050610bf45f830184610bd2565b92915050565b5f60208284031215610c0f57610c0e61087b565b5b5f82013567ffffffffffffffff811115610c2c57610c2b61087f565b5b610c3884828501610ad2565b91505092915050565b5f81519050919050565b5f82825260208201905092915050565b8281835e5f83830152505050565b5f610c7382610c41565b610c7d8185610c4b565b9350610c8d818560208601610c5b565b610c96816109cb565b840191505092915050565b5f6020820190508181035f830152610cb98184610c69565b905092915050565b5f608082019050610cd45f830187610bd2565b610ce16020830186610913565b8181036040830152610cf38185610c69565b9050610d026060830184610b7f565b95945050505050565b5f81519050610d1981610999565b92915050565b5f60208284031215610d3457610d3361087b565b5b5f610d4184828501610d0b565b91505092915050565b7f4e487b71000000000000000000000000000000000000000000000000000000005f52602260045260245ffd5b5f6002820490506001821680610d8e57607f821691505b602082108103610da157610da0610d4a565b5b50919050565b5f819050815f5260205f209050919050565b5f6020601f8301049050919050565b5f82821b905092915050565b5f60088302610e037fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff82610dc8565b610e0d8683610dc8565b95508019841693508086168417925050509392505050565b5f819050919050565b5f610e48610e43610e3e84610990565b610e25565b610990565b9050919050565b5f819050919050565b610e6183610e2e565b610e75610e6d82610e4f565b848454610dd4565b825550505050565b5f5f905090565b610e8c610e7d565b610e97818484610e58565b505050565b5b81811015610eba57610eaf5f82610e84565b600181019050610e9d565b5050565b601f821115610eff57610ed081610da7565b610ed984610db9565b81016020851015610ee8578190505b610efc610ef485610db9565b830182610e9c565b50505b505050565b5f82821c905092915050565b5f610f1f5f1984600802610f04565b1980831691505092915050565b5f610f378383610f10565b9150826002028217905092915050565b610f5082610c41565b67ffffffffffffffff811115610f6957610f686109db565b5b610f738254610d77565b610f7e828285610ebe565b5f60209050601f831160018114610faf575f8415610f9d578287015190505b610fa78582610f2c565b86555061100e565b601f198416610fbd86610da7565b5f5b82811015610fe457848901518255600182019150602085019450602081019050610fbf565b868310156110015784890151610ffd601f891682610f10565b8355505b6001600288020188555050505b505050505050565b5f81519050919050565b5f81905092915050565b5f61103482611016565b61103e8185611020565b935061104e818560208601610c5b565b80840191505092915050565b5f611065828461102a565b915081905092915050565b7f44656c65676174652063616c6c206661696c65640000000000000000000000005f82015250565b5f6110a4601483610c4b565b91506110af82611070565b602082019050919050565b5f6020820190508181035f8301526110d181611098565b905091905056fea26469706673582212208f4b03ecd811d9907758def77931c053a94abb6ffae9b11ccc29f1dd1532f6f664736f6c634300081e0033",
      "nonce": 2,
      "storage": {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x01",
      },
    },
    "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266": {
      "balance": "0x3635c9adc5de107bfb",
      "code": "0x",
      "nonce": 1,
      "storage": {},
    },
  },
}
`;
